--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "kloepfercons api",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node Server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "mukesh",
